dataset1235/2025-2/805158916/users/402682394/executions/2651470117_4233865845.log
== SUBMISSION (2025-08-14 23:42:00)
-- CODE: 
Cel = float(input("Insira temperatura em Celsius:"))
Fah = Cel*9/5+32
print(round(Fah,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira temperatura em Celsius:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira temperatura em Celsius:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira temperatura em Celsius:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira temperatura em Celsius:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira temperatura em Celsius:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira temperatura em Celsius:86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 23:41:52)
-- CODE: 
Cel = float(input("Insira temperatura em Celsius:"))
Fah = Cel*9/5+32
print(round(Fah,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira temperatura em Celsius:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira temperatura em Celsius:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira temperatura em Celsius:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira temperatura em Celsius:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira temperatura em Celsius:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira temperatura em Celsius:86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 23:43:22)
-- CODE: 
# Recebe temperatura em celsius
Cel = float(input("Insira temperatura em Celsius:"))
# Convers達o para Fahrenheit
Fah = Cel*9/5+32
# Arredonda e imprime valor de Fah
print(round(Fah,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira temperatura em Celsius:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira temperatura em Celsius:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira temperatura em Celsius:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira temperatura em Celsius:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira temperatura em Celsius:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira temperatura em Celsius:86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 23:41:11)
-- CODE: 
Cel = float(input("Insira temperatura em Celsius:"))
Fah = Cel*9/5+32
Print(round(Fah,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    Print(round(Fah,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    Print(round(Fah,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    Print(round(Fah,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    Print(round(Fah,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    Print(round(Fah,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    Print(round(Fah,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 23:41:39)
-- CODE: 
Cel = float(input("Insira temperatura em Celsius:"))
Fah = Cel*9/5+32
print(round(Fah,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira temperatura em Celsius:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira temperatura em Celsius:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira temperatura em Celsius:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira temperatura em Celsius:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira temperatura em Celsius:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira temperatura em Celsius:86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 23:44:03)
-- CODE: 
# Recebe temperatura em celsius
Cel = float(input("Insira temperatura em Celsius:"))
# Convers達o para Fahrenheit
Fah = Cel*9/5+32
# Arredonda e imprime valor de Fah
print(round(Fah,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira temperatura em Celsius:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira temperatura em Celsius:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira temperatura em Celsius:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira temperatura em Celsius:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira temperatura em Celsius:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira temperatura em Celsius:86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 23:43:34)
-- CODE: 
# Recebe temperatura em celsius
Cel = float(input("Insira temperatura em Celsius:"))
# Convers達o para Fahrenheit
Fah = Cel*9/5+32
# Arredonda e imprime valor de Fah
print(round(Fah,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira temperatura em Celsius:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira temperatura em Celsius:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira temperatura em Celsius:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira temperatura em Celsius:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira temperatura em Celsius:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira temperatura em Celsius:86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 23:43:45)
-- CODE: 
# Recebe temperatura em celsius
Cel = float(input("Insira temperatura em Celsius:"))
# Convers達o para Fahrenheit
Fah = Cel*9/5+32
# Arredonda e imprime valor de Fah
print(round(Fah,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira temperatura em Celsius:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira temperatura em Celsius:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira temperatura em Celsius:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira temperatura em Celsius:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira temperatura em Celsius:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira temperatura em Celsius:86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 23:41:23)
-- CODE: 
Cel = float(input("Insira temperatura em Celsius:"))
Fah = Cel*9/5+32
Print(round(Fah,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Fah,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Fah,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Fah,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Fah,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Fah,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Fah,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
